--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -28,13 +28,8 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
         
-      - name: Cache node_modules 📦
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Install depedencies 📦
+        run: npm install
             
       - name: Run linter
         run: npm run linter
