--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [10, 12, 14]
+        node: [10, 12, 14, 15]
 
     steps:
       - name: Checkout 🛎
