--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.25",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.15",
